--- a/package.json
+++ b/package.json
@@ -4,21 +4,19 @@
   "description": "Seed for TDD with Typescript using Mocha and Chai.",
   "main": "index.js",
   "scripts": {
-    "pretest": "./node_modules/.bin/tsc",
-    "test": "./node_modules/.bin/mocha -w -c"
+    "pretest": "tsc -p tsconfig.test.json",
+    "test": "mocha dist/**/*.spec.js",
+    "prestart": "tsc -p tsconfig.json",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "^3.4.32",
-    "@types/jasmine": "^2.2.33",
-    "@types/mocha": "^2.2.31",
-    "@types/core-js": "^0.9.39",
-    "chai": "^3.5.0",
-    "mocha": "^3.0.2",
-    "typescript": "^2.0.0"
-  },
-  "dependencies": {
-    "rxjs": "^5.0.0-beta.0"
+    "@types/chai": "^4.2.0",
+    "@types/jasmine": "^3.5.14",
+    "@types/mocha": "^8.0.3",
+    "mocha": "^8.1.2",
+    "typescript": "^4.0.2",
+    "chai": "^4.2.0"
   }
 }
