--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,29 @@
 {
     "compilerOptions": {
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "resolveJsonModule": true,
+        "declaration": true,
         "module": "commonjs",
-        "target": "es5",
-        "noImplicitAny": false,
-        "sourceMap": false,
-        "types": ["jasmine"]
-    },
-    "exclude": [
-        "node_modules"
-    ]
+        "moduleResolution": "node",
+        "target": "es6",
+        "watch": false,
+        "sourceMap": true,
+        "skipLibCheck" : true,
+        "outDir": "./dist",
+        "typeRoots": [
+          "node_modules/@types",
+          "typings.d.ts"
+        ],
+        "lib": [
+          "es6",
+          "dom",
+          "es2017"
+        ]
+      },
+      "exclude": [
+        "node_modules",
+        "dist",
+        "**/*.spec.ts"
+      ]
 }
